Fix room type filter behavior